@@ -1,4 +1,6 @@
 HEAD
+	+ Documented and made EBox::Users::InetOrgPerson::generatedFullname method
+	  more robust
 	+ Added basic format check for InetOrgPerson fields
 	+ Updated group name and username validation code to follow Windows
 	  restrictions and added unit tests for those restrictions
